Bug 126076 - FILESAVE XLSX Line chart automatic markers from Excel converted to square
Summary: FILESAVE XLSX Line chart automatic markers from Excel converted to square
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.7.2 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.0.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-06-25 09:29 UTC by NISZ LibreOffice Team
Modified: 2020-02-20 14:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel 2010 (18.85 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-06-25 09:30 UTC, NISZ LibreOffice Team
Details
Example file from Excel 2013 (21.05 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-06-25 09:30 UTC, NISZ LibreOffice Team
Details
The Excel 2010 example file saved by LO master (18.27 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-06-25 09:31 UTC, NISZ LibreOffice Team
Details
The Excel 2013 example file saved by LO master (17.79 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-06-25 09:31 UTC, NISZ LibreOffice Team
Details
The two original Excel files side by side in Excel (150.60 KB, image/png)
2019-06-25 09:32 UTC, NISZ LibreOffice Team
Details
The two original Excel files side by side in Calc (184.69 KB, image/png)
2019-06-25 09:32 UTC, NISZ LibreOffice Team
Details
The two exported files side by side in Calc (164.85 KB, image/png)
2019-06-25 09:32 UTC, NISZ LibreOffice Team
Details
The two exported files side by side in Excel (152.85 KB, image/png)
2019-06-25 09:33 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-06-25 09:29:56 UTC
Description:
In Excel 2010 the default automatic line chart markers are different in shape and color. When opening and saving the example file in current LO master the shapes are all converted to a square.
In Excel 2013 the default markers are different only in color and the shape is a dot, which is retained on LO export.


Steps to Reproduce:
1.	Create a line chart in Excel 2010 with many data rows
2.	Notice they get the Automatic marker setting which gets a different shape
3.	Open and save the file in Calc


Actual Results:
On saving all previously different shapes become a square. Also Excel indicates this is not “automatic” type but built-in, i.e. customly set.
In case of the Excel 2013 file the type changes to built-in too. However since there was no difference between shapes to begin with, the built-in dot shape is not visually different from the original automatic type dot shape.


Expected Results:
The “automatic” type setting is retained.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 4808ae1c73597726c89936f5b9cb3f11c9a4a7bf
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-06-24_23:50:55
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2019-06-25 09:30:32 UTC
Created attachment 152381 [details]
Example file from Excel 2010
Comment 2 NISZ LibreOffice Team 2019-06-25 09:30:55 UTC
Created attachment 152382 [details]
Example file from Excel 2013
Comment 3 NISZ LibreOffice Team 2019-06-25 09:31:17 UTC
Created attachment 152383 [details]
The Excel 2010 example file saved by LO master
Comment 4 NISZ LibreOffice Team 2019-06-25 09:31:41 UTC
Created attachment 152384 [details]
The Excel 2013 example file saved by LO master
Comment 5 NISZ LibreOffice Team 2019-06-25 09:32:04 UTC
Created attachment 152385 [details]
The two original Excel files side by side in Excel
Comment 6 NISZ LibreOffice Team 2019-06-25 09:32:20 UTC
Created attachment 152386 [details]
The two original Excel files side by side in Calc
Comment 7 NISZ LibreOffice Team 2019-06-25 09:32:41 UTC
Created attachment 152387 [details]
The two exported files side by side in Calc
Comment 8 NISZ LibreOffice Team 2019-06-25 09:33:00 UTC
Created attachment 152388 [details]
The two exported files side by side in Excel
Comment 9 Roman Kuznetsov 2019-06-26 20:46:23 UTC
confirm in

Version: 6.4.0.0.alpha0+ (x64)
Build ID: c0d1bdbb8a9aca2ef2e475268a953da995567700
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-22_23:10:51
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

and in

Версия: 4.4.7.2
ID сборки: f3153a8b245191196a4b6b9abd1d0da16eead600
Локаль: ru_RU
Comment 10 Commit Notification 2020-02-20 14:04:04 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bae73c0726e7fdf7f427a8254c9d6d4b4c510daf

tdf#126076 XLSX export: fix automatic line chart markers

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.