tdf#126076 XLSX export: fix automatic line chart markers

The default automatic line chart markers in XLSX spreadsheets created
with Microsoft Excel 2010 became squares after export.

Change-Id: I58a3e10212608a356eef8fbd1e100eda4dbebaca